# Lichess-Kids

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-build.yml
assets/: metadata.json
deploy/quadlet/: lichesskids-assets.volume  lichesskids-db.volume  lichesskids.container
deploy/reverse-proxy/: Caddyfile  nginx.conf  traefik.yaml
src/: assets.rs  db.rs  lib.rs  lichess.rs  main.rs  routes.rs
static/: avatar-renderer.js  dashboard.html  index.html  login.html  select-avatar.html  style.css
tests/: auth_tests.rs  db_tests.rs
