[package]
name = "lichesskids"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
reqwest = { version = "0.12.5", features = ["json"] }
tower-http = { version = "0.5.2", features = ["fs", "cors"] }
rand = "0.8.5"
sha2 = "0.10.8"
base64 = "0.22.1"
urlencoding = "2.1.3"
chrono = "0.4"
futures-util = "0.3"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }

